--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\Hp.cs" />
      <Compile Include="Assets\Scripts\Objects\ObjectControl.cs" />
      <Compile Include="Assets\Scripts\Objects\ObjectReaction.cs" />
+     <Compile Include="Assets\Scripts\RotateCamera.cs" />
      <Compile Include="Assets\Scripts\System\Action.cs" />
      <Compile Include="Assets\Scripts\System\Edges.cs" />
      <Compile Include="Assets\Scripts\System\Line.cs" />
