--- a/ShapesSource.CSharp.csproj
+++ b/ShapesSource.CSharp.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Assets\Scripts\System\MainController.cs" />
     <Compile Include="Assets\Scripts\System\Pool.cs" />
     <Compile Include="Assets\Scripts\UI\LvlButton.cs" />
+    <Compile Include="Assets\Scripts\UI\ProgressBar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
